Adds streams for tasks
Resource streams are not yet implemented